This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2002-03-20 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/SimpleConfigurator.hh, src/SimpleConfigurator.cpp:
	added configure(std::istream&) method. (feature request #527760)

2002-03-17 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* tests/testbench.cpp: added missing 'std::' specifiers. (bug #530332)

	* src/SyslogAppender.cpp: fix format string bug. (bug #527475)

2002-02-18 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* Release as 0.3.0
	
	* INSTALL: added some platform specific build instructions.

	* tests/Clock.hh: replaced "long long" with int64_t.

	* src/OstringStream.cpp: fix typo.

	* src/Appender.cpp: added missing Mutex.

	* include/log4cpp/threading/OmniThreads.hh: added Doxygen comments.

	* NEWS: release 0.3.0.
	
	* configure.in: upped release to 0.3.0 and LT version to 4.0.0
	
2002-02-11 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* configure.in: integrated check of omnithreads.
	* m4/BB_CHECK_OMNITHREADS.m4: added

	* include/log4cpp/threading/DummyThreads.hh: scoped lock is now
	an integer.

	* include/log4cpp/Category.hh, 
	include/log4cpp/FixedContextCategory.hh,
	include/log4cpp/HierarchyMaintainer.hh,
	include/log4cpp/NDC.hh,
	src/Category.cpp, src/FixedContextCategory.cpp,
	src/HierarchyMaintainer.cpp, src/NDC.cpp:
	added threadsafety provisions.

	* include/log4cpp/*.hh: replaced #include"" with #include<>
	* src/*.cpp: replaced #include"" with #include<>

	* include/log4cpp/Appender.hh, src/Appender.cpp:
	added Mutex for _allAppender map.

2002-02-08 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/threading/Threading.hh,
	include/log4cpp/threading/OmniThreads.hh,
	include/log4cpp/threading/DummyThreads.hh,
	include/log4cpp/threading/BoostThreads.hh,
	include/log4cpp/threading/Makefile.am: added
	
2002-02-05 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>